@@ -20,6 +20,8 @@
      own application, the package name must be changed from "com.example.*"
      to come from a domain that you own or have control over. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="8"
+    android:versionName="1.0"
     package="scas.editor.android"
 >
     <application android:icon="@drawable/app_notes"
@@ -108,8 +110,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="GraphActivity" android:label="@string/title_graph" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+
     </application>
 
-    <uses-sdk android:targetSdkVersion="4" android:minSdkVersion="3"/>
+    <uses-sdk android:targetSdkVersion="4" android:minSdkVersion="3" />
 </manifest>
 
