@@ -1,6 +1,7 @@
 (a+b)^2/(a^2-b^2) = (a+b)/(a-b)
 (1+sqrt(-1))/(1-sqrt(-1)) = sqrt(-1)
-a/4 = 1/4*a
+1/4*a = a/4
 factor(factorial(6)) = 2^4*3^2*5
-conjugate(sqrt(-1)+1/2) = 1/2-sqrt(-1)
+conjugate(1/2+sqrt(-1)) = 1/2-sqrt(-1)
 (1 <= 2) => (3 > 4)
+graph(sin(x*pi), x)
