@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<view xmlns:android="http://schemas.android.com/apk/res/android"
+    class="scas.editor.android.GraphActivity$GraphView"
+    android:id="@+id/graph"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+</view>
