@@ -28,6 +28,7 @@
     <string name="title_notes_list">meditor</string>
     <string name="title_note">Note</string>
     <string name="title_edit_title">Note title:</string>
+    <string name="title_graph">Graph</string>
     
     <string name="eval">Evaluate</string>
     <string name="app_name">meditor</string>
